<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_about_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.fragments.AboutFragment">

        <TextView
            android:id="@+id/header_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_about_text"
            style="bold"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/image_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_about"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/image_about_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003"
            android:src="@drawable/author" />

        <TextView
            android:id="@+id/body_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/about_text_size"
            android:textAlignment="center"
            android:text="@string/body_about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_about" />

        <TextView
            android:id="@+id/author_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/about_text_size"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/author_about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body_about" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>