<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_post"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/cardBackgroundColor"
                    android:elevation="2dp"
                    android:padding="10dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/user_image_comment"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="2dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/RoundedImageView"
                        app:strokeColor="@color/strokeImageColor"
                        app:strokeWidth="2dp"
                        android:src="@drawable/default_user" />

                    <TextView
                        android:id="@+id/title_post"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:maxLines="3"
                        android:text="lorem ipsum lorem"
                        android:textColor="@color/titleColor"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/user_image_comment"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/body_post"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="lorem lorem ipsum lorem"
                        app:layout_constraintEnd_toEndOf="@+id/title_post"
                        app:layout_constraintStart_toStartOf="@+id/title_post"
                        app:layout_constraintTop_toBottomOf="@+id/title_post" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_post">

                    <ImageView
                        android:id="@+id/icon_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/comment_icon_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_comment" />

                    <TextView
                        android:id="@+id/text_comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/comments"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_comment"
                        app:layout_constraintStart_toEndOf="@+id/icon_comment"
                        app:layout_constraintTop_toTopOf="@+id/icon_comment" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_comments"
            style="@style/CustomCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_post"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="1dp"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_comments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        app:layout_constrainedHeight="true"
                        android:layout_marginTop="10dp"
                        app:layout_constraintHeight_max="200dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/input_comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="@string/input_comment_hint"
                    android:autofillHints="comment"
                    android:inputType="text|textMultiLine"
                    android:minHeight="70dp"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/icon_submit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView_comments" />

                <ImageView
                    android:id="@+id/icon_submit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/submit_icon_description"
                    app:layout_constraintBottom_toBottomOf="@+id/input_comment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/input_comment"
                    app:srcCompat="@drawable/ic_arrow_submit" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>